<resources>
    <string name="app_name">Beginner Android Examples</string>
    <string name="hello_world">Hello, World!</string>
    <string name="open_new_activity">Open New Activity</string>
    <string name="open_new_activity_result_1">Open New Activity For Result 1</string>
    <string name="open_new_activity_result_2">Open New Activity For Result 2</string>
    <string name="open_website">Open Website</string>
    <string name="open_maps">Open Maps</string>
    <string name="hello_kotlin">Hello, Kotlin!</string>
    <string name="why_kotlin">Why Kotlin?</string>
    <string name="why_not_java">Why Not Java?</string>
    <string name="advanced_details">Advanced - Weather Details</string>
    <string name="advanced_list">Advanced - Weather List</string>
    <string name="hello_lubbock">Hello, Lubbock!</string>
    <string name="hello_resources">Hello, Resources!</string>
    <string name="explicit_intent">Explicit Intent</string>
    <string name="implicit_intent">Implicit Intent</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="string_and_length">Length of \"%1$s\": %2$d</string>
    <string name="default_text_value">Default Text Value</string>
    <string name="show_toast">Show Toast</string>
    <string name="show_game_details">Show Game Details</string>
    <string name="basic_views">Basic Views</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sample_sign_in">Sample Sign In</string>
    <string name="sign_in">SIGN IN</string>
    <string name="activity_lifecycle">Activity Lifecycle</string>
    <string name="label_logs">Logs:</string>
    <string name="fragments">Fragments</string>
    <string name="red_fragment_text">This is a RED fragment</string>
    <string name="blue_fragment_text">This is a BLUE fragment</string>
    <string name="change_fragments">Change Fragments</string>
    <string name="null_variable">Variable is null.</string>
    <string name="rationale_location">Location required for accurate weather information.</string>
    <string name="label_temperature">Temperature: %s</string>
    <string name="label_wind_speed">Wind Speed: %s mph</string>
    <string name="label_wind_bearing">Wind Bearing: %s</string>
    <string name="cd_weather_icon">Weather Icon</string>
    <string name="label_precip_probability">Chance of precipitation: %s%%</string>
    <string name="label_summary">Summary: %s</string>
    <string name="btn_text_current">Current Location</string>
    <string name="btn_text_random">Random Location</string>
    <string name="requested_location">Location: %.2f, %.2f</string>
    <string name="request_title">(%.02f,%.02f)</string>
</resources>
