<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    tools:context="com.codebaum.beginnerandroidexamples.ExampleListActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        tools:text="@string/string_and_length"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_toast"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginTop="10dp"
        android:text="@string/show_toast"
        android:textSize="20sp"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_video_game"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_toast"
        android:layout_marginTop="10dp"
        android:text="@string/show_game_details"
        android:textSize="20sp"/>

</RelativeLayout>
